# task_description_language

./: .gitignore  README.md  README_ITASC
hri_interface/: CMakeLists.txt  package.xml
hri_interface/scripts/: tcp2ros_interface.py  tcp2ros_youbot_interface.py
nlu/google_speech_recognition/: tobuild.txt
nlu/google_speech_recognition/google-recognition/: CMakeLists.txt  README
nlu/google_speech_recognition/google-recognition/pod-build/: Makefile  cmake_install.cmake  install_manifest.txt
nlu/google_speech_recognition/google-recognition/pod-build/lib/: libgoogle-recognition.so.1
nlu/google_speech_recognition/google-recognition/pod-build/lib/pkgconfig/: google-recognition.pc
nlu/google_speech_recognition/google-recognition/pod-build/src/: Makefile  cmake_install.cmake
nlu/google_speech_recognition/google-recognition/pod-build/src/test/: Makefile  cmake_install.cmake
nlu/google_speech_recognition/google-recognition/src/: CMakeLists.txt  CMakeLists.txt.new  recognize.c  web_client.c
nlu/google_speech_recognition/google-recognition/src/test/: CMakeLists.txt  tool.c
nlu/google_speech_recognition/speech-recognizer/: CMakeLists.txt  README
nlu/google_speech_recognition/speech-recognizer-spy/: Makefile
nlu/google_speech_recognition/speech-recognizer/pod-build/: Makefile  cmake_install.cmake  install_manifest.txt
nlu/google_speech_recognition/speech-recognizer/pod-build/include/speech_recognizer_gui/: speech_detector.h
nlu/google_speech_recognition/speech-recognizer/pod-build/lib/pkgconfig/: lcmtypes_speech-recognizer.pc
nlu/google_speech_recognition/speech-recognizer/pod-build/src/: Makefile  cmake_install.cmake  moc_speech_detector.cxx  moc_widget_h2sl.cxx  moc_widget_h2sl_comments.cxx
nlu/google_speech_recognition/speech-recognizer/src/: CMakeLists.txt  speech_detector.cc  speech_detector_demo.cc
nlu/h2sl/: llm.xml
nlu/h2sl/src/util/: CMakeLists.txt  gui.cc  gui_lcm.cc  nlu_lcm.cc  nlu_lcm_node.cc
nlu/lcm-read-only/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
nlu/lcm-read-only/.svn/: all-wcprops  dir-prop-base  entries
nlu/lcm-read-only/WinSpecific/.svn/: entries
nlu/lcm-read-only/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
nlu/lcm-read-only/docs/.svn/: all-wcprops  entries
nlu/lcm-read-only/examples/: Makefile  Makefile.in
nlu/lcm-read-only/examples/.svn/: entries
nlu/lcm-read-only/lcm/: Makefile  Makefile.in  lcm.pc
nlu/lcm-read-only/lcm-dotnet/.svn/: entries
nlu/lcm-read-only/lcm-java/: Makefile
nlu/lcm-read-only/lcm-java/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcm-lite/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcm-logger/: Makefile  Makefile.in  lcm-logger  lcm-logplayer
nlu/lcm-read-only/lcm-logger/.deps/: glib_util.Po  lcm_logger.Po  lcm_logplayer.Po
nlu/lcm-read-only/lcm-logger/.libs/: lcm-logger  lcm-logplayer
nlu/lcm-read-only/lcm-logger/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcm-lua/: Makefile
nlu/lcm-read-only/lcm-lua/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcm-python/: Makefile
nlu/lcm-read-only/lcm-python/.deps/: _lcm_la-module.Plo  _lcm_la-pyeventlog.Plo  _lcm_la-pylcm.Plo  _lcm_la-pylcm_subscription.Plo
nlu/lcm-read-only/lcm-python/.libs/: _lcm.soT
nlu/lcm-read-only/lcm-python/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcm/.deps/: eventlog.Plo  lcm.Plo  lcm_file.Plo  lcm_tcpq.Plo  lcm_udp.Plo  ringbuffer.Plo
nlu/lcm-read-only/lcm/.libs/: liblcm.so.1.2.2
nlu/lcm-read-only/lcm/.svn/: all-wcprops  entries
nlu/lcm-read-only/lcmgen/: Makefile  Makefile.in  lcm-gen
nlu/lcm-read-only/lcmgen-test/.svn/: entries
nlu/lcm-read-only/lcmgen/.deps/: emit_c.Po  emit_cpp.Po  emit_csharp.Po  emit_java.Po  emit_lua.Po  emit_python.Po  getopt.Po  lcmgen.Po  main.Po  sprintfalloc.Po  tokenize.Po
nlu/lcm-read-only/lcmgen/.svn/: all-wcprops  entries
nlu/lcm-read-only/liblcm-test/: Makefile  Makefile.in  lcm-buftest-receiver  lcm-buftest-sender  lcm-example  lcm-logfilter  lcm-sink  lcm-source  lcm-tester
nlu/lcm-read-only/liblcm-test/.deps/: buftest-receiver.Po  buftest-sender.Po  lcm-example.Po  lcm-logfilter.Po  lcm-sink.Po  lcm-source.Po  lcm-tester.Po
nlu/lcm-read-only/liblcm-test/.libs/: lcm-buftest-receiver  lcm-buftest-sender  lcm-example  lcm-logfilter  lcm-sink  lcm-source  lcm-tester
nlu/lcm-read-only/liblcm-test/.svn/: all-wcprops  entries
nlu/lcm-read-only/m4/: Makefile  Makefile.in
nlu/lcm-read-only/m4/.svn/: entries
nlu/lcm-read-only/m4macros/: Makefile  Makefile.in
nlu/lcm-read-only/m4macros/.svn/: entries
nlu/lcm-read-only/po/: Makefile  Makefile.in
nlu/lcm-read-only/po/.svn/: all-wcprops  entries
nlu/lcm-read-only/test/.svn/: all-wcprops  entries
nlu/liblbfgs/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
nlu/liblbfgs/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
nlu/liblbfgs/lib/: Makefile  Makefile.in
nlu/liblbfgs/lib/.deps/: lbfgs.Plo
nlu/liblbfgs/sample/: Makefile  Makefile.in  sample
nlu/liblbfgs/sample/.libs/: sample
(+77 files in other folders)
